重构java演示的内存相关文档